v1.1.0     * Add 'ChirpStack' uplink endpoint.     * Fix 'TTN' uplink endpoint. Field 'hardware_serial' should be used instead of 'dev_id'.     * Fix 'SensorLogDb.find' being case sensitive on sensorId filter.
