# routers/v1/SensorRouter.js
@@ -75,6 +75,11 @@ module.exports = () => {
             .then((result) => res.json(result))
             .catch((ex) => next(ex));
     });
+    router.post('/uplink/chirpstack', (req, res, next) => {
+        SensorController.uplinkChirpStack(res.locals.caller, req.body)
+            .then((result) => res.json(result))
+            .catch((ex) => next(ex));
+    });
 
     router.get('/:id/sensorlogs', (req, res, next) => {
         SensorLogController.getBySensor(res.locals.caller, req.params, req.query)
